Chore: Setup semantic release

--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/thomasthiebaud/htmldom-to-react#readme",
   "devDependencies": {
+    "@semantic-release/git": "6.0.1",
     "commitlint": "7.0.0",
     "husky": "0.14.3",
+    "semantic-release": "15.6.3",
     "tslint": "5.10.0",
     "tslint-react": "3.6.0",
     "typescript": "2.9.2"
