--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Convert HTML DOM to React elements",
   "main": "./lib/index.js",
   "scripts": {
-    "commitmsg": "commitlint -E GIT_PARAMS"
+    "commitmsg": "commitlint -E GIT_PARAMS",
+    "lint": "tslint --project .",
+    "lint:fix": "tslint --fix --project ."
   },
   "repository": {
     "type": "git",
