--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@semantic-release/git": "6.0.1",
     "commitlint": "7.0.0",
+    "conventional-changelog-eslint": "3.0.0",
     "husky": "0.14.3",
     "semantic-release": "15.6.3",
     "tslint": "5.10.0",
