--- a/.releaserc
+++ b/.releaserc
@@ -1,6 +1,7 @@
 analyzeCommits:
   preset: eslint
 prepare:
+- "@semantic-release/changelog"
 - "@semantic-release/npm"
 - path: "@semantic-release/git"
   assets:
