--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/thomasthiebaud/htmldom-to-react#readme",
   "devDependencies": {
+    "@semantic-release/changelog": "2.1.1",
     "@semantic-release/git": "6.0.1",
     "commitlint": "7.0.0",
     "conventional-changelog-eslint": "3.0.0",
