--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Convert HTML DOM to React elements",
   "main": "./lib/index.js",
   "scripts": {
+    "build": "npm run clean && tsc --project .",
+    "clean": "rimraf lib/ types/ yarn-error.log npm-debug.log",
     "commitmsg": "commitlint -E GIT_PARAMS",
     "lint": "tslint --project .",
     "lint:fix": "tslint --fix --project ."
@@ -18,12 +20,17 @@
     "url": "https://github.com/thomasthiebaud/htmldom-to-react/issues"
   },
   "homepage": "https://github.com/thomasthiebaud/htmldom-to-react#readme",
+  "files": [
+    "lib",
+    "types"
+  ],
   "devDependencies": {
     "@semantic-release/changelog": "2.1.1",
     "@semantic-release/git": "6.0.1",
     "commitlint": "7.0.0",
     "conventional-changelog-eslint": "3.0.0",
     "husky": "0.14.3",
+    "rimraf": "2.6.2",
     "semantic-release": "15.6.3",
     "tslint": "5.10.0",
     "tslint-react": "3.6.0",
