--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "outDir": "lib",
     "sourceMap": true,
     "target": "es6",
+    "declarationDir": "types"
   },
   "include": [
     "./src/**/*"
