--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "clean": "rimraf lib/ types/ yarn-error.log npm-debug.log",
     "commitmsg": "commitlint -E GIT_PARAMS",
     "lint": "tslint --project .",
-    "lint:fix": "tslint --fix --project ."
+    "lint:fix": "tslint --fix --project .",
+    "test": "jest --config ./config/jest.config.js"
   },
   "repository": {
     "type": "git",
@@ -27,11 +28,14 @@
   "devDependencies": {
     "@semantic-release/changelog": "2.1.1",
     "@semantic-release/git": "6.0.1",
+    "@types/jest": "23.1.4",
     "commitlint": "7.0.0",
     "conventional-changelog-eslint": "3.0.0",
     "husky": "0.14.3",
+    "jest": "23.3.0",
     "rimraf": "2.6.2",
     "semantic-release": "15.6.3",
+    "ts-jest": "23.0.0",
     "tslint": "5.10.0",
     "tslint-react": "3.6.0",
     "typescript": "2.9.2"
