--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "dom",
       "es2015"
     ],
+    "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "lib",
     "sourceMap": true,
