--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@semantic-release/changelog": "2.1.1",
     "@semantic-release/git": "6.0.1",
+    "@types/htmlparser2": "3.7.31",
     "@types/jest": "23.1.4",
     "commitlint": "7.0.0",
     "conventional-changelog-eslint": "3.0.0",
@@ -39,5 +40,9 @@
     "tslint": "5.10.0",
     "tslint-react": "3.6.0",
     "typescript": "2.9.2"
+  },
+  "dependencies": {
+    "domhandler": "2.4.2",
+    "htmlparser2": "3.9.2"
   }
 }
