--- a/package.json
+++ b/package.json
@@ -28,12 +28,17 @@
   "devDependencies": {
     "@semantic-release/changelog": "2.1.1",
     "@semantic-release/git": "6.0.1",
-    "@types/htmlparser2": "3.7.31",
+    "@types/enzyme": "3.1.11",
     "@types/jest": "23.1.4",
+    "@types/react": "16.4.6",
     "commitlint": "7.0.0",
     "conventional-changelog-eslint": "3.0.0",
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-16": "1.1.1",
     "husky": "0.14.3",
     "jest": "23.3.0",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
     "rimraf": "2.6.2",
     "semantic-release": "15.6.3",
     "ts-jest": "23.0.0",
@@ -44,5 +49,8 @@
   "dependencies": {
     "domhandler": "2.4.2",
     "htmlparser2": "3.9.2"
+  },
+  "peerDependencies": {
+    "react": "^16.2.0"
   }
 }
