--- a/package.json
+++ b/package.json
@@ -46,10 +46,7 @@
     "tslint-react": "3.6.0",
     "typescript": "2.9.2"
   },
-  "dependencies": {
-    "domhandler": "2.4.2",
-    "htmlparser2": "3.9.2"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "react": "^16.2.0"
   }
