--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "devDependencies": {
     "@semantic-release/changelog": "2.1.1",
     "@semantic-release/git": "6.0.1",
+    "@types/deepmerge": "2.1.0",
+    "@types/dompurify": "0.0.31",
     "@types/enzyme": "3.1.11",
     "@types/jest": "23.1.4",
     "@types/react": "16.4.6",
@@ -46,7 +48,10 @@
     "tslint-react": "3.6.0",
     "typescript": "2.9.2"
   },
-  "dependencies": {},
+  "dependencies": {
+    "deepmerge": "2.1.1",
+    "dompurify": "1.0.5"
+  },
   "peerDependencies": {
     "react": "^16.2.0"
   }
