--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "build": "npm run clean && tsc --project .",
     "clean": "rimraf lib/ types/ yarn-error.log npm-debug.log",
-    "commitmsg": "commitlint -E GIT_PARAMS",
     "lint": "tslint --project .",
     "lint:fix": "tslint --fix --project .",
     "test": "jest --config ./config/jest.config.js",
@@ -27,31 +26,36 @@
     "types"
   ],
   "devDependencies": {
-    "@semantic-release/changelog": "3.0.0",
-    "@semantic-release/git": "7.0.1",
-    "@types/dompurify": "0.0.31",
-    "@types/enzyme": "3.1.13",
-    "@types/jest": "23.3.1",
-    "@types/react": "16.4.11",
-    "commitlint": "7.0.0",
-    "conventional-changelog-eslint": "3.0.0",
-    "enzyme": "3.4.4",
-    "enzyme-adapter-react-16": "1.2.0",
-    "husky": "0.14.3",
-    "jest": "23.5.0",
-    "react": "16.4.2",
-    "react-dom": "16.4.2",
+    "@semantic-release/changelog": "3.0.1",
+    "@semantic-release/git": "7.0.5",
+    "@types/dompurify": "0.0.32",
+    "@types/enzyme": "3.1.15",
+    "@types/jest": "23.3.10",
+    "@types/react": "16.7.13",
+    "commitlint": "7.2.1",
+    "conventional-changelog-eslint": "3.0.1",
+    "enzyme": "3.7.0",
+    "enzyme-adapter-react-16": "1.7.0",
+    "husky": "1.2.0",
+    "jest": "23.6.0",
+    "react": "16.6.3",
+    "react-dom": "16.6.3",
     "rimraf": "2.6.2",
-    "semantic-release": "15.9.9",
-    "ts-jest": "23.1.4",
+    "semantic-release": "15.12.4",
+    "ts-jest": "23.10.5",
     "tslint": "5.11.0",
     "tslint-react": "3.6.0",
-    "typescript": "3.0.1"
+    "typescript": "3.2.2"
   },
   "dependencies": {
-    "dompurify": "1.0.7"
+    "dompurify": "1.0.8"
   },
   "peerDependencies": {
     "react": "^16.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
