--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "clean": "rimraf lib/ yarn-error.log npm-debug.log",
     "lint": "tslint --project .",
     "lint:fix": "tslint --fix --project .",
-    "test": "jest --config ./config/jest.config.js",
-    "test:watch": "jest --config ./config/jest.config.js --watch"
+    "test": "jest",
+    "start": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -58,5 +58,14 @@
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "moduleNameMapper": {
+      "\\.(css|less|sass|scss)$": "<rootDir>/tests/styleMock.js"
+    },
+    "setupFilesAfterEnv": [
+      "<rootDir>tests/setupTests.js"
+    ]
   }
 }
