--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "build": "npm run clean && tsc --project .",
     "clean": "rimraf lib/ yarn-error.log npm-debug.log",
-    "lint": "tslint --project .",
-    "lint:fix": "tslint --fix --project .",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "npm run lint -- --fix",
     "test": "jest",
     "start": "jest --watch"
   },
@@ -33,19 +33,23 @@
     "@types/enzyme": "3.9.3",
     "@types/jest": "24.0.13",
     "@types/react": "16.8.18",
+    "@typescript-eslint/eslint-plugin": "1.9.0",
+    "@typescript-eslint/parser": "1.9.0",
     "commitlint": "7.6.1",
     "conventional-changelog-eslint": "3.0.1",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.13.1",
+    "eslint": "5.16.0",
+    "eslint-config-prettier": "4.3.0",
+    "eslint-plugin-prettier": "3.1.0",
     "husky": "2.3.0",
     "jest": "24.8.0",
+    "prettier": "1.17.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "rimraf": "2.6.3",
     "semantic-release": "15.13.12",
     "ts-jest": "24.0.2",
-    "tslint": "5.16.0",
-    "tslint-react": "4.0.0",
     "typescript": "3.4.5"
   },
   "dependencies": {
