--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "types"
   ],
   "devDependencies": {
+    "@commitlint/cli": "8.2.0",
+    "@commitlint/config-conventional": "8.2.0",
     "@semantic-release/changelog": "3.0.2",
     "@semantic-release/git": "7.0.8",
     "@types/dompurify": "0.0.32",
@@ -35,7 +37,6 @@
     "@types/react": "16.8.18",
     "@typescript-eslint/eslint-plugin": "1.9.0",
     "@typescript-eslint/parser": "1.9.0",
-    "commitlint": "8.3.1",
     "conventional-changelog-eslint": "3.0.1",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.13.1",
@@ -60,7 +61,7 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS --extends @commitlint/config-conventional"
     }
   },
   "jest": {
