--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,10 @@
 language: node_js
-node_js:
-  - "14"
 
-cache:
-  directories:
-    - node_modules
+# Keep empty to use version from .nvmrc
+node_js: null
 
 install:
-  - npm install
+  - npm ci
 
 script:
   - npm run lint
@@ -16,3 +13,10 @@ script:
 
 after_success:
   - npx semantic-release
+
+branches:
+  only:
+    - master
+
+notifications:
+  email: false
