--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "scripts": {
-    "postinstall": "husky install",
-    "prepublishOnly": "pinst --disable",
-    "postpublish": "pinst --enable",
+    "prepare": "husky install",
     "build": "npm run clean && tsc --project .",
     "clean": "rimraf lib/ yarn-error.log npm-debug.log",
     "lint": "eslint --ext .ts .",
@@ -30,38 +28,37 @@
     "types"
   ],
   "devDependencies": {
-    "@commitlint/cli": "13.1.0",
-    "@commitlint/config-conventional": "13.1.0",
-    "@semantic-release/changelog": "6.0.0",
-    "@semantic-release/git": "10.0.0",
-    "@types/dompurify": "2.2.3",
-    "@types/enzyme": "3.10.9",
-    "@types/jest": "27.0.2",
-    "@types/react": "17.0.24",
-    "@typescript-eslint/eslint-plugin": "4.31.2",
-    "@typescript-eslint/parser": "4.31.2",
+    "@commitlint/cli": "16.2.3",
+    "@commitlint/config-conventional": "16.2.1",
+    "@semantic-release/changelog": "6.0.1",
+    "@semantic-release/git": "10.0.1",
+    "@types/dompurify": "2.3.3",
+    "@types/enzyme": "3.10.11",
+    "@types/jest": "27.4.1",
+    "@types/react": "17.0.43",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
     "conventional-changelog-eslint": "3.0.9",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
-    "eslint": "7.32.0",
-    "eslint-config-prettier": "8.3.0",
+    "eslint": "8.12.0",
+    "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
-    "husky": "7.0.2",
-    "jest": "27.2.2",
-    "pinst": "2.1.6",
-    "prettier": "2.4.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "husky": "7.0.4",
+    "jest": "27.5.1",
+    "prettier": "2.6.2",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "rimraf": "3.0.2",
-    "semantic-release": "18.0.0",
-    "ts-jest": "27.0.5",
-    "typescript": "4.4.3"
+    "semantic-release": "19.0.2",
+    "ts-jest": "27.1.4",
+    "typescript": "4.6.3"
   },
   "dependencies": {
-    "dompurify": "2.3.3"
+    "dompurify": "2.3.6"
   },
   "peerDependencies": {
-    "react": "^16.2.0 || ^17.0.0"
+    "react": "^16.2.0 || ^17.0.0 || ^18.0.0"
   },
   "jest": {
     "preset": "ts-jest",
