chore!: drop support for Node 20
BREAKING CHANGE: drop support for Node 20 and require Node 22 LTS or more recent

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Convert HTML DOM to React elements",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
+  "engines": {
+    "node": ">=22"
+  },
   "scripts": {
     "prepare": "husky install",
     "build": "npm run clean && tsc --project .",
